--- a/css/styles.css
+++ b/css/styles.css
@@ -3,49 +3,68 @@
     --pressed-state:#404BBF;
     --headers-color: #2E2F42;
     --text-color: #434455;
-    --subtle-text-color: #8E8F99;
   }
 body{
-    color:var(--headers-color);
+    color: var(--text-color);
     font-family: 'Roboto', sans-serif;
 }
 .logo{
+    font-family: "Raleway", sans-serif;
     text-decoration: none;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.4px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--brand-color-primary);
 }
-.accent-logo-part{
-    color:var(--brand-color-primary);
-    font-family: 'Raleway';
-}
-.noaccent-logo-part{
-    color: var(--headers-color);
-    font-family: 'Raleway';
-}
-.noaccent-logo-footer-part{
-    color: #E7E9FC;
-}
-.address{
+.link{
     text-decoration: none;
+    letter-spacing: 0.02em;
+}
+.list{
+    list-style: none;
+    text-decoration:none;
     color: var(--text-color);
     font-size:16px;
     line-height:1.5;
     font-style: normal;
+    letter-spacing: 0.02em;
 }
-.address:hover{
+.list:hover{
     color: var(--pressed-state);
 }
-.address:focus{
+.list:focus{
     color: var(--pressed-state);
+}
+.menu{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.menu:hover{
+    color: #404bbf;
+}
+.menu:focus{
+    color: #404bbf;
+}
+.noaccent-logo-part{
+    color: var(--headers-color);
+}
+.noaccent-logo-footer-part{
+    color: #E7E9FC;
 }
 .button{
+    font-family: "Roboto", sans-serif;
     background-color:var(--brand-color-primary);
     color: #fff;
     font-weight: 500;
     font-size: 16px;
     line-height:1.5;
     cursor:pointer;
+    letter-spacing: 0.04em;
+    cursor: pointer;
 }
 .button:hover{
     background-color: var(--pressed-state);
@@ -61,6 +80,7 @@ body{
     font-weight: 500;
     font-size:16px;
     line-height:1.5;
+    letter-spacing: 0.02em;
 }
 .navigation:hover{
     color:var(--pressed-state);
@@ -74,31 +94,42 @@ body{
   color: #fff;
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.1;
-  text-align: center
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 .advantage-header{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--text-color);
 }
 .advantage-paragraph{
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .section-header{
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
 }
 .team-members-name{
+    color: var(--text-color);
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 .team-members-description{
+    color: var(--text-color);
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .footer{
     color: #E7E9FC;
@@ -109,8 +140,10 @@ body{
     top: 2280px;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .portfolio-navigation-button{
+    font-family: "Roboto", sans-serif;
     color: var(--brand-color-primary);
     background-color:#E7E9FC;
     font-weight: 500;
@@ -131,12 +164,14 @@ body{
     color: #fff;
 }
 .portfolio-sample-title{
+    color: var(--text-color);
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
 }
 .portfolio-sample-description{
+    color: var(--text-color);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
