--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body{
     color: var(--brand-color-primary);
 }
 .link{
+    color: var(--text-color);
     text-decoration: none;
     letter-spacing: 0.02em;
 }
@@ -86,6 +87,20 @@ body{
     color:var(--pressed-state);
 }
 .navigation:focus{
+    color:var(--pressed-state);
+}
+.address{
+    font-family: 'Roboto';
+    color: var(--text-color);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;letter-spacing: 0.02em;
+}
+.address:hover{
+    color:var(--pressed-state);
+}
+.address:focus{
     color:var(--pressed-state);
 }
 .title-section{
