--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,6 @@ body{
     color: var(--text-color);
     font-family: 'Roboto', sans-serif;
 }
-.logo{
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--brand-color-primary);
-}
 .link{
     color: var(--text-color);
     text-decoration: none;
@@ -56,6 +46,16 @@ body{
 .noaccent-logo-footer-part{
     color: #E7E9FC;
 }
+.logo{
+    font-family: "Raleway", sans-serif;
+    text-decoration: none;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--brand-color-primary);
+}
 .button{
     font-family: "Roboto", sans-serif;
     background-color:var(--brand-color-primary);
@@ -65,7 +65,8 @@ body{
     line-height:1.5;
     cursor:pointer;
     letter-spacing: 0.04em;
-    cursor: pointer;
+    border-radius: 4px;
+    align-items: flex-start;
 }
 .button:hover{
     background-color: var(--pressed-state);
@@ -121,6 +122,7 @@ body{
     color: var(--text-color);
 }
 .advantage-paragraph{
+    color: var(--text-color);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
