footer logo colior fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body{
     color: var(--headers-color);
 }
 .noaccent-logo-footer-part{
-    color: #E7E9FC;
+    color: #f4f4fd;
 }
 .logo{
     font-family: "Raleway", sans-serif;
